# BeaverDen

./: .cursorrules  .gitignore  package.json
backend/: .env.example  alembic.ini  main.py  pyproject.toml  tt.py
backend/alembic/: env.py
backend/alembic/versions/: 05f202836a5b_add_user_preferences_model.py  110157f6880b_add_nullable_menu_fields.py  16e8d66ed1ac_initial_migration.py  38fd0b4c5eb0_rename_transaction_category_to_system_.py  4ef9047d5d10_initial_migration2.py  68664dd8a6ab_initial_migration.py  8092f02508ed_add_nullable_menu_fields_2.py  86d3ea6eb6e3_initial_migration4.py  8c96f0a11496_delete_back_populates.py  9ee5e8dcf2db_initial_migration3.py  add_category_rule_table.py  bb35403ef082_add_module_support_to_feature.py
backend/app/core/: auth_jwt.py  config.py  exception_handlers.py  models.py  runtime_config.py  security.py  startup.py  startup_manager.py
backend/app/db/: init_db.py  migrations.py  session.py
backend/app/models/: __init__.py  base.py  category_rule.py  enums.py  finance.py  menu.py  transaction.py  user.py  user_session.py  user_settings.py
backend/app/schemas/: category_rule.py  finance.py
backend/app/services/: auth_service.py  bank_parsers.py  budget_service.py  category_matcher.py  category_rule_service.py  category_service.py  finance_service.py  import_service.py  menu_service.py  security_service.py  transaction_service.py  user_service.py
backend/app/utils/: helpers.py
backend/scripts/: init_db.py
backend/tests/: test_auth_service.py  test_bank_statement_parser.py  test_reg_user.py  test_user_model.py
(+148 files in other folders)
